docker/sandbox/sandbox.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki-${SANDBOX_NAME}
  namespace: prod
  labels:
    app: mediawiki-${SANDBOX_NAME}
    type: mediawiki
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
  replicas: 1
  progressDeadlineSeconds: 180
  selector:
    matchLabels:
      app: mediawiki-${SANDBOX_NAME}
  template:
    metadata:
      labels:
        app: mediawiki-${SANDBOX_NAME}
        app_version: "${APP_VERSION}"
        config_version: "${CONFIG_VERSION}"
    spec:
      dnsConfig:
        options:
        - name: timeout
          value: "1"
      containers:
        - name: nginx
          image: artifactory.wikia-inc.com/sus/mediawiki-sandbox-nginx:${IMAGE_TAG}
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 3
          livenessProbe:
            httpGet:
              path: /health/check
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health/check
              port: 8080
            timeoutSeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 8080
            - containerPort: 4040
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 50Mi
        - name: php
          image: ${MEDIAWIKI_IMAGE}:${IMAGE_TAG}
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 3
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 9000
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 5
              memory: 5Gi  # 5 fpm workers x 512 MB PHP memory limit
            requests:
              cpu: 2.5
              memory: 3Gi
        - name: fpm-prometheus-exporter
          image: hipages/php-fpm_exporter:1.0.0
          ports:
            - containerPort: 9253
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 50m
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-${SANDBOX_NAME}
  labels:
    app: mediawiki-${SANDBOX_NAME}
spec:
  selector:
    app: mediawiki-${SANDBOX_NAME}
  ports:
    - protocol: TCP
      port: 80
      name: main
      targetPort: 8080
    - protocol: TCP
      port: 9253
      name: metrics
      targetPort: 9253
    - protocol: TCP
      port: 4040
      name: vtsmetrics
      targetPort: 4040
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mediawiki-${SANDBOX_NAME}-ingress
  labels:
    app: mediawiki-${SANDBOX_NAME}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "${SANDBOX_NAME}.wikia.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: mediawiki-${SANDBOX_NAME}
              servicePort: 80
