docker/sandbox/sjc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki-sandbox
  namespace: prod
  labels:
    app: mediawiki-sandbox
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mediawiki-sandbox
  template:
    metadata:
      labels:
        app: mediawiki-sandbox
    spec:
      containers:
        - name: nginx
          image: artifactory.wikia-inc.com/sus/mediawiki-sandbox-nginx:sandbox-sus2
          ports:
            - containerPort: 8080
        - name: php
          image: artifactory.wikia-inc.com/sus/mediawiki-sandbox-php:sandbox-sus2
        - name: logger
          image: artifactory.wikia-inc.com/sus/mediawiki-logger:latest
---
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-sandbox
spec:
  selector:
    app: mediawiki-sandbox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mediawiki-sandbox-ingress
spec:
  rules:
    - host: "mediawiki.prod.sjc.k8s.wikia.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: mediawiki-sandbox
              servicePort: 80
